@@ -66,17 +66,25 @@ $tooldir/upx.exe --lzma -9 dosbox-x.exe
 cp CHANGELOG CHANGELOG.txt || exit 1
 cp dosbox-x.reference.conf dosbox-x.ref || exit 1
 cp dosbox-x.reference.full.conf dosbox-x.ref.full || exit 1
+cp contrib/windows/installer/inpout32.dll INPOUT32.DLL || exit 1
+cp contrib/fonts/FREECG98.BMP . || exit 1
+cp contrib/fonts/Nouveau_IBM.ttf . || exit 1
+cp contrib/fonts/SarasaGothicFixed.ttf . || exit 1
 cp $hxdir/DPMILD32.EXE . || exit 1
 cp $hxdir/HDPMI32.EXE . || exit 1
 cp $hxdir/HXGUIHLP.INI . || exit 1
 cp $hxdir/README.TXT . || exit 1
 cp $hxdir/WINSPOOL.DRV . || exit 1
 cp $hxdir/*.DLL . || exit 1
+mkdir -p drivez || exit 1
+cp contrib/windows/installer/drivez_readme.txt drivez/readme.txt || exit 1
+mkdir -p language || exit 1
+for i in `ls contrib/translations/` ; do cp contrib/translations/$i/*.lng language/; done
 
 cd "$top/$hxdosdir" || exit 1
 echo "Packing up now..."
 
-$tooldir/zip.exe -r -9 ../"$name" {CHANGELOG.txt,dosbox-x.exe,dosbox-x.ref,dosbox-x.ref.full,DPMILD32.EXE,HDPMI32.EXE,HXGUIHLP.INI,README.TXT,WINSPOOL.DRV,*.DLL} || exit 1
+$tooldir/zip.exe -r -9 ../"$name" {CHANGELOG.txt,dosbox-x.exe,dosbox-x.ref,dosbox-x.ref.full,FREECG98.BMP,Nouveau_IBM.ttf,SarasaGothicFixed.ttf,DPMILD32.EXE,HDPMI32.EXE,HXGUIHLP.INI,README.TXT,WINSPOOL.DRV,*.DLL,drivez/*,language/*} || exit 1
 cd ..
 
 exit 0
